src/test/deca/context/valid/test_condition_false.deca
// Description:
//    programme avec condition.
//
// Resultats:
//    pqs d'affichage de valid
//
// Historique:
//    cree le 01/01/2024

{
boolean state = true;
if(!state){
    print("valid");
}
}
